[project]
name = "kospi-night-futures"
version = "0.1.0"
description = "KOSPI 200 Night Futures Real-time Data Service (야간선물 실시간 서비스)"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
